--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="start">GOT IT</string>
 
     <string name="slide_1_title">Place Order!</string>
-    <string name="slide_1_desc">Tasty, hot and hygienic!</string>
+    <string name="slide_1_desc">Tasty, hot and hygienic meals!</string>
 
     <string name="slide_2_title">Location</string>
     <string name="slide_2_desc">Automatically pics your current location  for easy and fast delivery!</string>
