--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="about">Located in Juja along Thika super highway, Moriah Fries provides tatsy, hygenic and fresh meals prepared by well trained chef\'s that will surely bring happiness to your stomach</string>
 </resources>
